# gtm-robot-espeak

./: README.md
gtm_speech_msgs/: CMakeLists.txt  package.xml
gtm_speech_msgs/action/: Speak.action
gtm_speech_msgs/cfg/: Speech.cfg
gtm_speech_synth/: CMakeLists.txt  package.xml
gtm_speech_synth/src/: speech_synthesizer.cpp
gtm_speech_test/: CMakeLists.txt  package.xml
gtm_speech_test/launch/: test.launch
gtm_speech_test/script/: speech_test.py
