<?xml version="1.0"?>
<package>
  <name>gtm_speech_msgs</name>
  <version>0.0.0</version>
  <description>The gtm_speech_msgs package</description>

  <maintainer email="qaston@gmail.com">Dariusz Antoniuk</maintainer>
  <author email="qaston@gmail.com">Dariusz Antoniuk</author>
  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>message_generation</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <export>
  </export>
</package>