<?xml version="1.0"?>
<package>
  <name>gtm_speech_synth</name>
  <version>0.0.1</version>
  <description>The gtm_speech_synth package</description>

  <maintainer email="qaston@gmail.com">Dariusz Antoniuk</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <!-- taken from: https://github.com/ros/rosdistro/blob/master/rosdep/base.yaml -->
  <build_depend>libespeak-dev</build_depend>
  <run_depend>libespeak-dev</run_depend>
  <run_depend>espeak</run_depend>

  <export>
  </export>
</package>